--- a/KimChanIl/codingapple/views/list.ejs
+++ b/KimChanIl/codingapple/views/list.ejs
@@ -30,15 +30,44 @@
               </li>
           </ul>
       </nav>
-      서버에서 가져온 할일 리스트
-      <% for (var i= 0; i < posts.length ; i++){ %>
+      <h4 class="m1-2 my-3">서버에서 가져온 할일 리스트</h4>
+      <!--<% for (var i= 0; i < posts.length ; i++){ %>
       <h4>할일 제목 : <%= posts[i].이름 %></h4>
       <p>할일 마감날짜 : <%= posts[i].나이 %></p>
-    <% } %>
+      <button>DELETE</button>
+    <% } %>-->
+    <ul class="list-group">
+      <% for (var i= 0; i < posts.length ; i++){ %>
+      <li class="list-group-item">
+        <p>글 번호 : <%= posts[i]._id %></p>
+          <h4>할일 제목 : <%= posts[i].이름 %></h4>
+          <p>할일 마감날짜 : <%= posts[i].나이 %></p>
+          <button class="del" data-id="<%= posts[i]._id %>">DELETE</button>
+        </li>
+        <% } %>
+    </ul>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+    <script>
+
+      $('.del').click(function(e){
+        var  글번호 = e.target.dataset.id;
+        $.ajax({
+          method: 'DELETE',
+          url : '/delete',
+          data : {_id: 글번호 }
+        }).done(function(result){
+          console.log('성공')
+        }).fail(function(xhr,textStatus,errorThrown){
+          console.log(xhr,textStatus,errorThrown);
+        });
+
+
+      })
+
+    </script>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
