--- a/KimChanIl/codingapple/views/login.ejs
+++ b/KimChanIl/codingapple/views/login.ejs
@@ -44,7 +44,19 @@
         <button type="submit" class="btn btn-danger">Submit</button>
       </form>
     </div>
-
+    <div class="container mt-4">
+      <form action="/register" method="POST">
+        <div class="form-group">
+          <label >ID</label>
+          <input type="text" class="form-control" name="id">
+        </div>
+        <div class="form-group">
+          <label>PassWord</label>
+          <input type="password" class="form-control" name="pw">
+        </div>
+        <button type="submit" class="btn btn-danger">join us</button>
+      </form>
+    </div>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
