--- a/KimChanIl/codingapple/views/chat.ejs
+++ b/KimChanIl/codingapple/views/chat.ejs
@@ -30,59 +30,54 @@
               </li>
           </ul>
       </nav>
-      <h4 class="m1-2 my-3">서버에서 가져온 할일 리스트</h4>
-      <!--<% for (var i= 0; i < posts.length ; i++){ %>
-      <h4>할일 제목 : <%= posts[i].이름 %></h4>
-      <p>할일 마감날짜 : <%= posts[i].나이 %></p>
-      <button>DELETE</button>
-    <% } %>-->
-    <div class="container input-group mb-2">
-      <input class="form-control" id="search-input">
-      <button class="input-group-append btn btn-danger" id="search">검색</button>
-    </div>
-    <ul class="list-group">
-      <% for (var i= 0; i < posts.length ; i++){ %>
-      <li class="list-group-item">
-        <p>글 번호 : <%= posts[i]._id %></p>
-          <h4>할일 제목 : <%= posts[i].이름 %></h4>
-          <p>할일 마감날짜 : <%= posts[i].나이 %></p>
-          <a href="detail/<%= posts[i]._id %>">move</a>
-          <button class="del" data-id="<%= posts[i]._id %>">DELETE</button>
-          <button class="btn btn-secondary chat" data-id="<%= posts[i].작성자 %>">채팅하기</button>
-        </li>
-        <% } %>
-    </ul>
+      <div class="container p-4 detail">
+
+        <div class="row">
+          <div class="col-3">
+            <ul class="list-group chat-list">
+                <% for (let i=0;i< data.length;i++){ %>
+              <li class="list-group-item" data-id="<%= data[i]._id %>">
+                <h6><%= data[i].title %></h6>
+                <h6 class="text-small"><%= data[i].member[0] %></h6>
+              </li>
+              <% } %> 
+             </ul>
+           </div>
+      
+           <div class="col-9 p-0">
+             <div class="chat-room">
+                <ul class="list-group chat-content">
+                  <li><span class="chat-box">채팅방1 내용</span></li>
+                  <li><span class="chat-box">채팅방1 내용</span></li>
+                  <li><span class="chat-box mine">채팅방1 내용</span></li>
+                </ul>
+              <div class="input-group">
+                <input class="form-control" id="chat-input">
+                <button class="btn btn-secondary" id="send">전송</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      
+      </div> 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
-    <script>
-      $('.chat').click(function(e){
-      var _id = e.target.dataset.id;
-      $.post('/chatroom', {당한사람id : _id})
-      .then(()=>{
-        console.log('채팅방 게시물 생성완료')
-      })
-    });
-      $('#search').click(function(){
-    var 입력한값 = $('#search-input').val();
-    window.location.replace('/search?value=' + 입력한값)
-  });
-      $('.del').click(function(e){
-        var  글번호 = e.target.dataset.id;
-        $.ajax({
-          method: 'DELETE',
-          url : '/delete',
-          data : {_id: 글번호 }
-        }).done(function(result){
-          console.log('성공')
-        }).fail(function(xhr,textStatus,errorThrown){
-          console.log(xhr,textStatus,errorThrown);
-        });
-
-
-      })
-
-    </script>
     <!-- Optional JavaScript; choose one of the two! -->
-
+<script>
+    var targetchatid
+    $('.list-group-item').click(()=>{
+        targetchatid = this.dataset.id;
+    })
+    $('#send').click(()=>{
+        var chatcontent = $('#chat-input').val();
+        var senddata= {
+            parent: targetchatid ,
+            content: chatcontent
+        }
+        $.post('/message',senddata).then(()=>{
+            console.log('success')
+        })
+    })
+</script>
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
 
