--- a/SeoJangSeok/CodingApple/views/list.ejs
+++ b/SeoJangSeok/CodingApple/views/list.ejs
@@ -54,8 +54,8 @@
     <h4><%= posts[1].제목%></h4>
     <p><%= posts[1].날짜 %></p> -->
     <% for (var i = 0; i < posts.length; i++) { %>
-    <h4><%= posts[i].이름 %></h4>
-    <p><%= posts[i].나이 %></p>
+    <h4><%= posts[i].제목 %></h4>
+    <p><%= posts[i].날짜 %></p>
     <% } %>
 
     <!-- Optional JavaScript; choose one of the two! -->
