--- a/ShinMyongJin/CodingApple/views/list.ejs
+++ b/ShinMyongJin/CodingApple/views/list.ejs
@@ -1,5 +1,3 @@
-(views/list.ejs)
-
 <!doctype html>
 <head>
     <!-- Required meta tags -->
@@ -34,17 +32,17 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
     <script>
-      $.ajax({
-        method : 'DELETE',
-        url : '/delete',
-        data : '1번게시물'
-      }).done(function(결과){
-        AJAX 성공시 실행할 코드는 여기
-      }).fail(function(에러){
-        실패시 실행할 코드는 여기
+      $('.delete').click(function(){
+        $.ajax({
+          method : 'DELETE',
+          url : '/delete',
+          data : { _id : e.target.dataset.id }
+        }).done(function(결과){
+    //AJAX 성공시 실행할 코드는 여기
+        })
       });
     </script>
-
+    
     <script
       src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
       integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
