--- a/SeoJangSeok/CodingApple/views/list.ejs
+++ b/SeoJangSeok/CodingApple/views/list.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang>
+<html>
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
     />
 
-    <title>Hello, world!</title>
+    <title>List</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -40,7 +40,7 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Write</a>
+            <a class="nav-link" href="./write">Write</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">임시</a>
@@ -53,19 +53,34 @@
     <p><%= posts[0].날짜 %></p>
     <h4><%= posts[1].제목%></h4>
     <p><%= posts[1].날짜 %></p> -->
-    <% for (var i = 0; i < posts.length; i++) { %>
-    <h4><%= posts[i].제목 %></h4>
-    <p><%= posts[i].날짜 %></p>
-    <% } %>
+
+    <ul class="list-group">
+      <% for (var i = 0; i < posts.length; i++) { %>
+      <li class="list-group-item">
+        <h4>할일 제목 : <%= posts[i].제목 %></h4>
+        <p>할일 마감날짜 : <%= posts[i].날짜 %></p>
+        <button class="delete" data-id="<%= posts[i]._id %>">삭제</button>
+      </li>
+      <% } %>
+    </ul>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+
+    <script>
+      $('.delete').click(function () {
+        $.ajax({
+          method: 'DELETE',
+          url: '/delete',
+          data: { _id: e.target.dataset.id },
+        }).done((result) => {
+          // AJAX 성공시 실행할 코드적기
+          $(this).parent('li').fadeOut()
+        })
+      })
+    </script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
