--- a/SeoJangSeok/CodingApple/views/detail.ejs
+++ b/SeoJangSeok/CodingApple/views/detail.ejs
@@ -16,43 +16,59 @@
       crossorigin="anonymous"
     />
 
-    <title>List</title>
+    <title>Detail</title>
   </head>
   <body>
-    <%- include('nav.html') %>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">Todo App</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#"
+              >Home <span class="sr-only">(current)</span></a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./write">Write</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">임시</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
 
-    <!-- <h4><%= posts[0].제목 %></h4>
-    <p><%= posts[0].날짜 %></p>
-    <h4><%= posts[1].제목%></h4>
-    <p><%= posts[1].날짜 %></p> -->
+    <!--<h4>상세페이지 입니다.</h4>
+    <h4>제목 : <%= data.제목 %></h4>
+    <h4>날짜 : <%= data.날짜 %></h4> -->
 
-    <ul class="list-group">
-      <% for (var i = 0; i < posts.length; i++) { %>
-      <li class="list-group-item">
-        <h4>할일 제목 : <%= posts[i].제목 %></h4>
-        <p>할일 마감날짜 : <%= posts[i].날짜 %></p>
-        <button class="delete" data-id="<%= posts[i]._id %>">삭제</button>
-      </li>
-      <% } %>
-    </ul>
+    <div class="container mt-3">
+      <div class="card" style="width: 100%">
+        <div class="card-body">
+          <h5 class="card-title"><%= data.제목 %></h5>
+          <h6 class="card-subtitle mb-2 text-muted"><%= data.날짜 %></h6>
+          <p class="card-text">임시내용입니다.</p>
+          <a href="#" class="card-link">수정하기</a>
+        </div>
+      </div>
+    </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
 
-    <script>
-      $('.delete').click(function () {
-        $.ajax({
-          method: 'DELETE',
-          url: '/delete',
-          data: { _id: e.target.dataset.id },
-        }).done((result) => {
-          // AJAX 성공시 실행할 코드적기
-          $(this).parent('li').fadeOut()
-        })
-      })
-    </script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
