--- a/ShinMyongJin/CodingApple/views/login.ejs
+++ b/ShinMyongJin/CodingApple/views/login.ejs
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     />
-    <title>Document</title>
+    <title>로그인좀해라</title>
   </head>
   <body>
     <nav class="navbar navbar-dark bg-dark">
@@ -20,14 +20,28 @@
     <div class="container mt-3">
       <form action="/login" method="POST">
         <div class="form-group">
-          <label>오늘의 할일</label>
+          <label>아이디</label>
           <input type="text" class="form-control" name="id" />
         </div>
         <div class="form-group">
-          <label>날짜</label>
+          <label>비번</label>
           <input type="text" class="form-control" name="pw" />
         </div>
-        <button type="submit" class="btn btn-outline-secondary">Submit</button>
+        <button type="submit" class="btn btn-outline-secondary">로그인</button>
+      </form>
+    </div>
+
+    <div class="container mt-3">
+      <form action="/register" method="POST">
+        <div class="form-group">
+          <label>아이디</label>
+          <input type="text" class="form-control" name="id" />
+        </div>
+        <div class="form-group">
+          <label>비번</label>
+          <input type="text" class="form-control" name="pw" />
+        </div>
+        <button type="submit" class="btn btn-outline-secondary">가입</button>
       </form>
     </div>
 
