--- a/ShinMyongJin/CodingApple/views/nav.html
+++ b/ShinMyongJin/CodingApple/views/nav.html
@@ -1,3 +1,4 @@
-<nav class="navbar navbar-light bg-light">
-  <a class="navbar-brand" href="#">TODOAPP</a>
+<nav class="navbar navbar-dark bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">할일</a>
 </nav>
