--- a/ShinMyongJin/CodingApple/views/chat.ejs
+++ b/ShinMyongJin/CodingApple/views/chat.ejs
@@ -7,23 +7,20 @@
     content="width=device-width, initial-scale=1, shrink-to-fit=no"
   />
 
-  <link rel="public" href="/public/chat.css" />
   <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="/public/chat.css" />
   <title>chatroom</title>
 </head>
 
 <body>
-    <div class="container">
-        <%- include('nav.html') %>
-
-  <h4 class="ml-2 my-3 text-center">채팅방</h4>
 
   <div class="container p-4 detail">
+        <%- include('nav.html') %>
     <div class="row">
       <div class="col-3">
         <ul class="list-group chat-list">
@@ -33,11 +30,6 @@
             <h6 class="text-small"><%= data[i].member[0] %></h6>
           </li>
           <% } %>
-
-          <li class="list-group-item">
-            <h6>채팅방2</h6>
-            <h6 class="text-small">채팅방설명</h6>
-          </li>
         </ul>
       </div>
 
@@ -56,16 +48,26 @@
       </div>
     </div>
   </div>
-  <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
-      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-      crossorigin="anonymous"
-    ></script>
+
+  <script>
+  
+  var 지금누른채팅방id;
+    $('.list-group-item').click(function(){
+        지금누른채팅방id = this.dataset.id;
+    })
+
+    $('#send').click(function(){
+        var 채팅내용 = $('#chat-input').val()
+        var 보낼거 = {
+            parent : 지금누른채팅방id,
+            content : 채팅내용,
+        }
+        $.post('/message', 보낼거).then(()=>{
+            console.log('전송성공');
+        })
+    })
+  </script>
+  <script src="https://code.jQuery.com/jquery-3.4.1.min.js"></script>
 </body>
 
 </html>
