[ADD] 실시간 데이터 보내고 받는법2

--- a/ShinMyongJin/CodingApple/views/socket.ejs
+++ b/ShinMyongJin/CodingApple/views/socket.ejs
@@ -18,11 +18,28 @@
     ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.6.1/socket.io.js"></script>
     <div>채팅방</div>
+    <input id="input1" />
+    <div id="content"></div>
     <button id="send">서버에 메세지 보내기</button>
+    <button id="room1">채팅방1입장</button>
+    <button id="room1-send">채팅방1에서 메세지보내기</button>
     <script>
       var socket = io();
+
+      $('#room1-send').click(function () {
+        socket.emit('room1-send', '하이 채팅1 인간들아');
+      });
+
+      $('#room1').click(function () {
+        socket.emit('joinroom', '채팅방입장시켜줘');
+      });
+
       $('#send').click(function () {
-        socket.emit('user-send', '안녕하세요');
+        socket.emit('user-send', $('#input1').val());
+      });
+
+      socket.on('broadcast', function (data) {
+        $('#content').append('<div>' + data + '</div>');
       });
     </script>
   </body>
