--- a/SeoJangSeok/CodingApple/views/list.ejs
+++ b/SeoJangSeok/CodingApple/views/list.ejs
@@ -16,6 +16,8 @@
       crossorigin="anonymous"
     />
 
+    <link rel="stylesheet" href="/public/main.css" />
+
     <title>List</title>
   </head>
   <body>
@@ -42,16 +44,20 @@
         window.location.replace('/search?value=' + 입력한값)
       })
     </script>
-
-    <ul class="list-group">
-      <% for (var i = 0; i < posts.length; i++) { %>
-      <li class="list-group-item">
-        <h4>할일 제목 : <%= posts[i].제목 %></h4>
-        <p>할일 마감날짜 : <%= posts[i].날짜 %></p>
-        <button class="delete" data-id="<%= posts[i]._id %>">삭제</button>
-      </li>
-      <% } %>
-    </ul>
+    <div class="container">
+      <ul class="list-group">
+        <% for (var i = 0; i < posts.length; i++) { %>
+        <li class="list-group-item">
+          <p>글번호 : <%= posts[i]._id %></p>
+          <h4>할일 제목 : <%= posts[i].제목 %></h4>
+          <p>할일 마감날짜 : <%= posts[i].날짜 %></p>
+          <button class="btn btn-danger delete" data-id="<%= posts[i]._id %>">
+            삭제
+          </button>
+        </li>
+        <% } %>
+      </ul>
+    </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
