--- a/SeoJangSeok/CodingApple/views/mypage.ejs
+++ b/SeoJangSeok/CodingApple/views/mypage.ejs
@@ -17,8 +17,10 @@
     />
 
     <title>Hello, world!</title>
+  </head>
+  <body>
+    <%- include('nav.html') %>
     <p><%= 사용자.id %>마이페이지입니다.</p>
- 
 
     <!-- Optional JavaScript; choose one of the two! -->
 
