--- a/SeoJangSeok/CodingApple/views/list.ejs
+++ b/SeoJangSeok/CodingApple/views/list.ejs
@@ -54,6 +54,12 @@
           <button class="btn btn-danger delete" data-id="<%= posts[i]._id %>">
             삭제
           </button>
+          <button
+            class="btn btn-secondary chat"
+            data-id="<%= posts[i].작성자 %>"
+          >
+            채팅
+          </button>
         </li>
         <% } %>
       </ul>
@@ -72,6 +78,14 @@
         }).done((result) => {
           // AJAX 성공시 실행할 코드적기
           $(this).parent('li').fadeOut()
+        })
+      })
+    </script>
+    <script>
+      $('.chat').click(function (e) {
+        var id = e.target.dataset.id
+        $.post('/chatroom', { 당한사람id: id }).then(() => {
+          console.log('성공')
         })
       })
     </script>
