--- a/SeoJangSeok/CodingApple/views/chat.ejs
+++ b/SeoJangSeok/CodingApple/views/chat.ejs
@@ -59,11 +59,22 @@
       // 채팅방 하나 누르면
       $('.list-group-item').click(function () {
         지금누른채팅방id = this.dataset.id
+        $('.chat-content').html('')
+        // 소통채널 나가기
+        if (eventSource != undefined) {
+          eventSource.close()
+        }
+
         // 프론트엔드에서 실시간 소통채널 여는법
-        eventSource = new EventSource('/message/ + 지금누른채팅방id') // 실시간 소통채널 입장완료
+        eventSource = new EventSource('/message/' + 지금누른채팅방id) // 실시간 소통채널 입장완료
         // 유저가 데이터 수신은 new EventSource('/경로') 그리고 이벤트리스너 부착.
         eventSource.addEventListener('test', function (e) {
-          console.log(JSON.parse(e.data))
+          var 가져온거 = JSON.parse(e.data)
+          가져온거.forEach(function (i) {
+            $('.chat-content').append(
+              '<li><span class="chat-box">' + i.content + '</span></li>'
+            )
+          })
         })
       })
 
