--- a/SeoJangSeok/CodingApple/views/socket.ejs
+++ b/SeoJangSeok/CodingApple/views/socket.ejs
@@ -24,11 +24,29 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.6.1/socket.io.js"></script>
 
     <div>채팅방</div>
+    <div id="content"></div>
+    <input id="input1" />
     <button id="send">서버에 메세지 보내기</button>
+    <button id="room1">채팅방1 입장</button>
+    <button id="room1-send">채팅방1에서 메세지버내기</button>
     <script>
       var socket = io()
+
+      $('#room1-send').click(function () {
+        socket.emit('room1-send', '반가워 채팅방1 사람들아')
+      })
+
+      $('#room1').click(function () {
+        socket.emit('joinroom', '채탕방입장시켜줘')
+      })
+
       $('#send').click(function () {
-        socket.emit('user-send', '안녕하세요')
+        socket.emit('user-send', $('#input1').val())
+      })
+
+      socket.on('broadcast', function (data) {
+        // console.log(data)
+        $('#content').append('<div>' + data + '</div>')
       })
     </script>
     <!-- Optional JavaScript; choose one of the two! -->
